--- a/index.html
+++ b/index.html
@@ -71,7 +71,19 @@
         </div>
     </section>
 
-    
+    <section class="community_container">
+        <div class="community_content">
+            <h1>FAÇA PARTE DA COMUNIDADE</h1>
+            <button class="btn_community">ENTRAR</button>
+        </div>
+        <div class="galery_container">
+            <img src="./assets/img/time_comensais.jpeg" alt="">
+            <div class="galery_doble">
+                <img src="./assets/img/time_comensais.jpeg" alt="">
+                <img src="./assets/img/time_comensais.jpeg" alt="">
+            </div>
+        </div>
+    </section>
 
 </body>
 
