--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
@@ -74,16 +75,14 @@
     <section class="community_container">
         <div class="community_content">
             <h1>FAÇA PARTE DA COMUNIDADE</h1>
+            <p>Venha se juntar ao nosso fórum de vôlei e mergulhe em uma comunidade apaixonada pelo esporte! Não importa se você é um jogador casual, um fã dedicado ou um técnico experiente, todos são bem-vindos para compartilhar suas histórias, dicas e amor pelo vôlei. </p>
             <button class="btn_community">ENTRAR</button>
         </div>
-        <div class="galery_container">
-            <img src="./assets/img/time_comensais.jpeg" alt="">
-            <div class="galery_doble">
-                <img src="./assets/img/time_comensais.jpeg" alt="">
-                <img src="./assets/img/time_comensais.jpeg" alt="">
-            </div>
-        </div>
     </section>
+
+    <footer class="footer_container">
+
+    </footer>
 
 </body>
 
