feat: Footer adicionado no site

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <img src="./assets/img/voleibol_png_preta.png" alt="">
         </div>
         <ul class="navigation">
-            <li>HISTÓRIA</li>
-            <li>CARACTERÍSTICAS</li>
-            <li>SOBRE MIM </li>
+            <li><a href="#history">HISTÓRIA</a></li>
+            <li><a href="#caracteristics">CARACTERÍSTICAS</a></li>
+            <li><a href="#aboutMe">SOBRE MIM</a></li>
         </ul>
         <button class="btn_header">ENTRAR</button>
     </header>
@@ -37,7 +37,7 @@
         </div>
     </section>
 
-    <section class="history_container">
+    <section id="history" class="history_container">
         <div class="history_left_container"></div>
         <div class="text_content">
             <h4>História do vôlei</h4>
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    <section class="characteristics_container">
+    <section id="caracteristics" class="characteristics_container">
         <div class="characteristics_header">
             <h1>MAIS QUE UM JOGO</h1>
         </div>
@@ -63,7 +63,7 @@
         </div>
     </section>
 
-    <section class="about_container">
+    <section id="aboutMe" class="about_container">
         <div class="about_right_container"></div>
         <div class="text_content">
             <h4>Sobre mim</h4>
@@ -81,7 +81,34 @@
     </section>
 
     <footer class="footer_container">
-
+        <div class="top_footer">
+            <div class="img_container_footer ">
+                <img src="./assets/img/voleibol_png_branca.png" alt="">
+            </div>
+            <ul class="list_footer">
+                <li class="title_list">Navegação</li>
+                <li>História</li>
+                <li>Características</li>
+                <li>Sobre mim</li>
+            </ul>
+            <ul class="list_footer">
+                <li class="title_list">Contato</li>
+                <li>(+55) 0000-0000</li>
+                <li>(+55) 3691-0000</li>
+                <li>nome.sobrenome@gmail.com</li>
+            </ul>
+            <div class="list_icon">
+                <p class="title_list">Redes Sociais</p>
+                <div class="flex_icon">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-whatsapp"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                </div>
+            </div>
+        </div>
+        <div class="bottom_footer">
+            <p>©2024 - Vôlei como estilo de vida</p>
+        </div>
     </footer>
 
 </body>
@@ -106,5 +133,8 @@
             actualBall = 'mikasa'
         }
     }, 1500)
+
+
+
 
 </script>
