feat: Adicionado tela de login e cadastro

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#caracteristics">CARACTERÍSTICAS</a></li>
             <li><a href="#aboutMe">SOBRE MIM</a></li>
         </ul>
-        <button class="btn_header">ENTRAR</button>
+        <a href="login.html"><button class="btn_header">ENTRAR</button></a>
     </header>
 
     <section class="banner_mikasa">
