feat: Validação de email na tela de cadastro e confirmação de de cadastro após as validações forem atendidas.

--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
 
         let msgError = '';
         if (email == '' || password == '') {
-            msgError = 'Preencha os campos corretamente'
+            msgError = 'Preencha todos os campos'
             alert_error.innerHTML = msgError;
             alert_error.style.animationName = 'showRight'
             alert_error.addEventListener('animationend', setTimeout(() => {
