--- a/public/login.html
+++ b/public/login.html
@@ -20,6 +20,8 @@
                 <h1>ENTRAR</h1>
                 <form class="form_container" action="">
                     <input id="input_email" type="text" placeholder="nome@gmail.com">
+                    <span id="error_email" class="msg_error">Insira um email válido</span>
+
                     <input id="input_password" type="password" placeholder="********">
                     <a href="">Esqueceu a senha?</a>
                 </form>
@@ -38,21 +40,34 @@
 
 <script>
 
+    function alertMsg(msg, type) {
+        alert_error.innerHTML = msg;
+        alert_error.style.backgroundColor = type
+        alert_error.style.animationName = 'showRight'
+        alert_error.addEventListener('animationend', setTimeout(() => {
+            alert_error.style.animationName = 'hideRight'
+        }, 2000)
+        )
+    }
+
     function entrar() {
 
         const email = input_email.value;
         const password = input_password.value;
-
+        error_email.style.display = 'none'
+        
         let msgError = '';
+        let wrongColor = 'rgb(240, 81, 81)'
+        let correctColor = 'rgb(43, 207, 98)'
         if (email == '' || password == '') {
             msgError = 'Preencha todos os campos'
-            alert_error.innerHTML = msgError;
-            alert_error.style.animationName = 'showRight'
-            alert_error.addEventListener('animationend', setTimeout(() => {
-                alert_error.style.animationName = 'hideRight'
-            }, 2000)
-            )
+            alertMsg(msgError, wrongColor)
 
+        }
+
+        if (email.indexOf('@') < 0 || email.indexOf('.com') < 0) {
+            error_email.style.display = 'block';
+            validationIsCompleted = false;
         }
 
 
