--- a/public/login.html
+++ b/public/login.html
@@ -25,7 +25,7 @@
                     <input id="input_password" type="password" placeholder="********">
                     <a href="">Esqueceu a senha?</a>
                 </form>
-                <div class="btn_container">
+                <div id="btn_content" class="btn_container">
                     <button class="" onclick="entrar()">ENTRAR</button>
                     <span>Ainda não tem conta? <a href="cadastro.html">Cadastre-se</a></span>
                 </div>
@@ -40,35 +40,103 @@
 
 <script>
 
+    function limparCampos() {
+        input_email.value = '';
+        input_password.value = '';
+        btn_content.innerHTML = `
+             <button class="" onclick="entrar()">ENTRAR</button>
+             <span>Ainda não tem conta? <a href="cadastro.html">Cadastre-se</a></span>
+        `
+    }
+
     function alertMsg(msg, type) {
         alert_error.innerHTML = msg;
         alert_error.style.backgroundColor = type
         alert_error.style.animationName = 'showRight'
         alert_error.addEventListener('animationend', () => {
-            setTimeout(() =>{
+            setTimeout(() => {
                 alert_error.style.animationName = 'hideRight'
-            },2000)
+            }, 2000)
         }
         )
     }
 
     function entrar() {
+        btn_content.innerHTML = `<span class="loader"></span>`
 
         const email = input_email.value;
         const password = input_password.value;
+
         error_email.style.display = 'none'
+
         let msgError = '';
         let wrongColor = 'rgb(240, 81, 81)'
         let correctColor = 'rgb(43, 207, 98)'
+
+        let validationIsCompleted = true;
+
+
         if (email == '' || password == '') {
             msgError = 'Preencha todos os campos'
             alertMsg(msgError, wrongColor)
-
+            validationIsCompleted = false;
         }
 
         if (email.indexOf('@') < 0 || email.indexOf('.com') < 0) {
             error_email.style.display = 'block';
             validationIsCompleted = false;
+        }
+
+        if (validationIsCompleted == false) {
+            btn_content.innerHTML = `
+                    <button class="" onclick="entrar()">ENTRAR</button>
+                    <span>Ainda não tem conta? <a href="cadastro.html">Cadastre-se</a></span>
+            `
+            return;
+        } else {
+            fetch("/usuarios/autenticar", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    emailServer: email,
+                    senhaServer: password
+                })
+            }).then(function (resposta) {
+                console.log("ESTOU NO THEN DO entrar()!")
+
+                if (resposta.ok) {
+                    console.log(resposta);
+
+                    resposta.json().then(json => {
+                        console.log(json);
+                        console.log(JSON.stringify(json));
+                        sessionStorage.EMAIL_USUARIO = json.email;
+                        sessionStorage.NOME_USUARIO = json.nome;
+                        sessionStorage.ID_USUARIO = json.id;
+                        // sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
+
+                        setTimeout(function () {
+                            window.location = "./forum/home.html";
+                            limparCampos();
+                        }, 1000); // apenas para exibir o loading
+
+                    });
+
+                } else {
+
+                    console.log("Houve um erro ao tentar realizar o login!");
+
+                    resposta.text().then(texto => {
+                        console.error(texto);
+
+                    });
+                }
+
+            }).catch(function (erro) {
+                console.log(erro);
+            })
         }
 
 
